Top navigation bug on smaller devices
- Removed issue making top navigation appear in the centre of the page

--- a/css/home.styles.css
+++ b/css/home.styles.css
@@ -32,7 +32,6 @@ nav {
 }
 
 #navigation-container {
-  width: 70%;
   max-width: 1200px;
 }
 
